# patterns

./: CMakeLists.txt  main.cpp
client/: Client.cpp  Client.h  ClientCareTaker.cpp  ClientCareTaker.h  ClientSnap.cpp  ClientSnap.h  Clients.cpp  Clients.h  CreatorOrder.cpp  CreatorOrder.h  IObservable.cpp  IObservable.h  IObserver.cpp  IObserver.h  IOrder.h  Order.cpp  Order.h  OrderBuilder.cpp  OrderBuilder.h  ProxyOrder.cpp  ProxyOrder.h  Status.cpp  Status.h  TypeDelivery.h  clientClasses.h
dialogs/: CardPayWindow.cpp  CardPayWindow.h  ConsoleDialog.cpp  ConsoleDialog.h  CreatorOrder.cpp  CreatorOrder.h  IDialog.cpp  IDialog.h  LinuxFormDialog.cpp  LinuxFormDialog.h  MyMessageDialog.cpp  MyMessageDialog.h  PizzaDialog.cpp  PizzaDialog.h  ShawarmaDialog.cpp  ShawarmaDialog.h  WebmoneyPayWindow.cpp  WebmoneyPayWindow.h
goods/: CookingGood.cpp  CookingGood.h  Good.cpp  Good.h  ICloneable.cpp  ICloneable.h  Ingredient.cpp  Ingredient.h  Iterator.cpp  Iterator.h  Pizza.cpp  Pizza.h  Product.cpp  Product.h  ProductIterator.cpp  ProductIterator.h  Shawarma.cpp  Shawarma.h  ShawarmaFactory.cpp  ShawarmaFactory.h  SizeShawarma.cpp  SizeShawarma.h  SizeShawarmaFactory.cpp  SizeShawarmaFactory.h  Stock.cpp  Stock.h  TypePizza.cpp  TypePizza.h  TypePizzaFactory.cpp  TypePizzaFactory.h
log/: ConsoleLogger.cpp  ConsoleLogger.h  EmailLogger.cpp  EmailLogger.h  Logger.cpp  Logger.h  SmsLogger.cpp  SmsLogger.h
notifications/: EmailNotif.cpp  EmailNotif.h  INotifier.cpp  INotifier.h  NotifDecorator.cpp  NotifDecorator.h  NotifierAdapter.cpp  NotifierAdapter.h  TelNotif.cpp  (+3 more)
(+42 files in other folders)
